--- a/conatct.html
+++ b/conatct.html
@@ -1,5 +1,6 @@
- <!DOCTYPE html>
+<!DOCTYPE html>
 <html>
+
 <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -11,20 +12,48 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
     <script src="main.js"></script>
 </head>
+
 <body>
     <div class="conatiner-fluid bg-grey">
+        <div class="container">
         <h2 class="text-center">CONTACT</h2>
         <div class="row">
             <div class="col-md-5">
-                <p>contact us we will get back to you within 24 hours.</p><br>
-                <span class="glyphicon glyphicon-map-marker">  mumbai, maharashtra</span><br>
-                <span class="glyphicon glyphicon-phone">  723454334</span><br>
-                <span class="glyphicon glyphicon-envelope">  abcd@gmail.com</span><br>
+                <p>contact us we will get back to you within 24 hours.</p>
+                <br>
+                <span class="glyphicon glyphicon-map-marker"> mumbai, maharashtra</span>
+                <br>
+                <span class="glyphicon glyphicon-phone"> 723454334</span>
+                <br>
+                <span class="glyphicon glyphicon-envelope"> abcd@gmail.com</span>
+                <br>
 
             </div>
-            <div class="col-md-7"></div>
+            <div class="col-md-7">
+                <div class="row">
+                    <div class="col-sm-6">
+                        <input class="form-control" type="text" placeholder="name" id="name" name="name" required>
+                    </div>
+                    <div class="col-sm-6">
+                        <input class="form-control" type="email" placeholder="email" id="email" name="email" required>
+                    </div>
+                </div>
+                <br>
+                <textarea class="form-control" name="comments" id="comments" cols="30" rows="5"></textarea>
+                <br>
+                <div class="row">
+                    <div class="form-group col-sm-12">
+                        <button class="btn btn-default pull-right" type="button">send</button>
+                    </div>
+                </div>
+            </div>
+
         </div>
     </div>
-    
+    </div>
+    </div>
+    </div>
+
 </body>
+
 </html>
